lab6/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: lab6
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          command:
            - /bin/sh
            - -c
          args:
            - |
              echo "<html><body><h1>BACKEND API</h1><p>Pod: $(hostname)</p></body></html>" > /usr/share/nginx/html/index.html
              nginx -g 'daemon off;'
