lab6/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: lab6
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          command:
            - /bin/sh
            - -c
          args:
            - |
              echo "<html><body><h1>FRONTEND WEB</h1><p>Pod: $(hostname)</p></body></html>" > /usr/share/nginx/html/index.html
              nginx -g 'daemon off;'
