lab6/services-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: lab6
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: lab6
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
